overflow correction

--- a/src/components/weather/Weather.css
+++ b/src/components/weather/Weather.css
@@ -1,7 +1,7 @@
 .Weather {
   background-color: #282c34;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
   display: grid;
   grid-gap: 45px;
   justify-content: center;
@@ -12,9 +12,11 @@
 h1 {
   color: black;
 }
-form{
+
+form {
   align-items: center;
 }
+
 .display-conditions {
   background-color: whitesmoke;
   opacity: .8;
@@ -26,6 +28,7 @@ form{
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 3fr 1fr;
   width: 100%;
+  height: 100%;
   text-align: center;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
